--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "serve": "webpack serve"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.18",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
-    "sass-loader": "^14.1.1"
+    "postcss-loader": "^8.1.1",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4"
   }
 }
